# wreckless

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
src/audio/: CMakeLists.txt  dsound_device.c
src/d3d/: CMakeLists.txt  d3d8_device.c  d3d8_internal.h
src/game/: CMakeLists.txt  main.c
src/game/recomp/: recomp_dispatch.h  recomp_stubs.c  recomp_types.h
src/input/: CMakeLists.txt
src/kernel/: CMakeLists.txt  kernel.h  kernel_bridge.c  kernel_hal.c  kernel_path.c  kernel_thread.c  kernel_thunks.c  kernel_xbox.c  xbox_memory_layout.c  xbox_memory_layout.h
tools/: add_icall_targets.py  detect_functions.py  patch_generated.py
tools/recomp/: lifter.py  translator.py
